# rodos

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
config/: config.toml  log4rs.yaml
src/: application.rs  core.rs  domain.rs  infrastructure.rs  main.rs
src/application/: cat.rs  cd.rs  commands.rs  cp.rs  create.rs  defrag.rs  del.rs  fmt.rs  help.rs  ls.rs  mkdir.rs  mod.rs  neofetch.rs  pwd.rs  queries.rs  rename.rs  setattr.rs
src/application/commands/: cd.rs  cp.rs  create.rs  defrag.rs  del.rs  fmt.rs  mkdir.rs  rename.rs  setattr.rs
src/application/queries/: cat.rs  help.rs  ls.rs  neofetch.rs  pwd.rs
src/core/: cli_macros.rs  cli_parser.rs  config.rs  content_type.rs  file_type.rs  filter_type.rs  mod.rs  sort_type.rs
src/domain/: boot_sector.rs  config.rs  disk.rs  disk_manager.rs  fat.rs  file_entry.rs  i_disk_manager.rs  mod.rs
src/infrastructure/: disk_manager.rs  i_disk_manager_impl.rs  mod.rs
