[package]
name = "rodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.4"
colored = "2.0.0"
lazy_static = "1.4.0"
mediator = "0.2.2"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
