[package]
name = "rodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
color-print = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
mediator = "0.2.2"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
